--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-server.port=8882
+server.port=8080
 spring.datasource.url=jdbc:mysql://localhost:3306/login_system_db
-spring.datasource.username=root
-spring.datasource.password=admin
+spring.datasource.username=your_username
+spring.datasource.password=your_password
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 security.ignored=/**
 security.basic.enabled=false
 management.security.enabled=false
